build: no need for credentials in SPARQL endpoint URL

--- a/.local.env
+++ b/.local.env
@@ -9,7 +9,7 @@ STORE_QUERY_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/query
 STORE_UPDATE_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/update
 STORE_GRAPH_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/data
 STORE_ENGINE=fuseki
-PUBLIC_QUERY_ENDPOINT=https://admin:password@db.cube-creator.lndo.site/shared-dimensions
+PUBLIC_QUERY_ENDPOINT=https://db.cube-creator.lndo.site/shared-dimensions
 TRIFID_UI=https://lindas.admin.ch/sparql
 VISUALIZE_UI=https://visualize.admin.ch
 
