build: simplify lando, using its features

--- a/.lando.yml
+++ b/.lando.yml
@@ -31,9 +31,11 @@ services:
   store:
     type: compose
     ssl: true
+    build_as_root:
+      - /opt/java-minimal/bin/keytool -importcert -trustcacerts -noprompt -storepass changeit -cacerts -file /usr/share/ca-certificates/lndo.site.pem -alias LandoCert
     services:
       image: ghcr.io/zazuko/fuseki-geosparql:v2.0.3
-      command: sh -c '/opt/java-minimal/bin/keytool -importcert -trustcacerts -noprompt -storepass changeit -cacerts -file /usr/share/ca-certificates/lndo.site.pem -alias LandoCert ; /opt/fuseki/entrypoint.sh'
+      command: /opt/fuseki/entrypoint.sh
       user: root
       environment:
         ADMIN_PASSWORD: password
