chore: fix a lot of typing issues

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -34,8 +34,12 @@
   },
   "files": [
     "types/global.d.ts",
+    "types/oruga.d.ts",
+    "types/vue.d.ts",
+    "types/vuex.d.ts",
+    "types/vue-color.d.ts",
     "types/vue-markdown.d.ts",
-    "types/vue-select.d.ts",
+    "types/vue-select.d.ts"
   ],
   "include": [
     "src/**/*.ts",
