--- a/ui/package.json
+++ b/ui/package.json
@@ -16,12 +16,12 @@
     "@fortawesome/fontawesome-svg-core": "~1.2.32",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/vue-fontawesome": "^2.0.0",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@hydrofoil/shaperone-core": "^0.8.5",
     "@hydrofoil/shaperone-hydra": "^0.3.3",
     "@hydrofoil/shaperone-wc": "^0.6.7",
-    "@oruga-ui/oruga": "^0.5.4",
-    "@oruga-ui/theme-bulma": "^0.2.2",
+    "@oruga-ui/oruga-next": "^0.5.4",
+    "@oruga-ui/theme-bulma": "^0.2.3",
     "@rdf-esm/data-model": "^0.5.3",
     "@rdf-esm/dataset": "^0.5.1",
     "@rdfine/schema": "^0.6.3",
