--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "npm-run-all": "^4.1.5",
     "standard": "^16.0.0",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3",
+    "typescript": "~4.5.0",
     "winston": "^3.3.3"
   },
   "mocha": {
@@ -66,6 +66,7 @@
     ]
   },
   "resolutions": {
-    "jsonld": "~1"
+    "jsonld": "~1",
+    "@types/eslint": "^8"
   }
 }
