--- a/ui/package.json
+++ b/ui/package.json
@@ -87,7 +87,7 @@
     "node-env-run": "^4.0.2",
     "sass": "^1.27.0",
     "sass-loader": "^12.0.0",
-    "typescript": "^4.0.3",
+    "typescript": "~4.5.0",
     "vue-template-compiler": "^2.6.14"
   },
   "browserslist": [
