--- a/ui/package.json
+++ b/ui/package.json
@@ -46,6 +46,7 @@
     "cookie-storage": "^6.1.0",
     "core-js": "^3.6.5",
     "debounce": "^1.2.1",
+    "markdown-it": "^12.3.2",
     "oidc-client": "^1.11.0",
     "process": "^0.11.10",
     "slugify": "^1.4.6",
@@ -54,7 +55,6 @@
     "vue": "^3.1.0",
     "vue-color": "^2.7.1",
     "vue-custom-element": "^3.2.14",
-    "vue-markdown": "^2.2.4",
     "vue-router": "^4.0.0",
     "vue-select": "^3.16.0",
     "vuex": "^4.0.0",
@@ -64,6 +64,7 @@
     "@cypress/webpack-preprocessor": "^5.4.10",
     "@types/clownface": "^1.0.3",
     "@types/debounce": "^1.2.0",
+    "@types/markdown-it": "^12.2.3",
     "@types/rdf-ext": "^1.3.11",
     "@types/rdf-js": "^4",
     "@types/rdfjs__dataset": "^1.0.4",
