--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
     "serve-local": "nodenv --env ../.local.env --exec 'vue-cli-service serve'"
   },
   "dependencies": {
+    "@ckpack/vue-color": "^1.1.8",
     "@cube-creator/core": "0.3.4",
     "@cube-creator/model": "0.1.26",
     "@fortawesome/fontawesome-svg-core": "~1.2.32",
@@ -53,10 +54,9 @@
     "stream-browserify": "^3.0.0",
     "util": "^0.12.4",
     "vue": "^3.1.0",
-    "vue-color": "^2.7.1",
     "vue-custom-element": "^3.2.14",
     "vue-router": "^4.0.0",
-    "vue-select": "^3.16.0",
+    "vue-select": "^4.0.0-beta.3",
     "vuex": "^4.0.0",
     "vuex-oidc": "^3.10.1"
   },
