--- a/ui/package.json
+++ b/ui/package.json
@@ -52,6 +52,7 @@
     "process": "^0.11.10",
     "slugify": "^1.4.6",
     "stream-browserify": "^3.0.0",
+    "tslib": "^2.3.1",
     "util": "^0.12.4",
     "vue": "^3.1.0",
     "vue-custom-element": "^3.2.14",
