--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -13,6 +13,7 @@
     "useDefineForClassFields": false,
     "sourceMap": true,
     "baseUrl": ".",
+    "downlevelIteration": true,
     "typeRoots": ["./types", "./node_modules/@types"],
     "allowJs": true,
     "types": [
