--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@he-tree/vue3": "^1.2.9",
     "@hydrofoil/shaperone-core": "^0.8.5",
     "@hydrofoil/shaperone-hydra": "^0.3.3",
     "@hydrofoil/shaperone-wc": "^0.6.7",
@@ -58,6 +59,7 @@
     "vue-custom-element": "^3.2.14",
     "vue-router": "^4.0.0",
     "vue-select": "^4.0.0-beta.3",
+    "vuejs-tree": "^3.0.2",
     "vuex": "^4.0.0",
     "vuex-oidc": "^3.10.1"
   },
