build(deps): temporary resolution until zazuko/clownface#65

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "resolutions": {
     "jsonld": "~1",
-    "@types/eslint": "^8"
+    "@types/eslint": "^8",
+    "clownface": "zazuko/clownface#filter-return-value"
   }
 }
