Revert temporary clownface resolution
This reverts commit 897ec956fe4d1eacc3ac57d5a77f4d96baeacc37.

--- a/package.json
+++ b/package.json
@@ -67,7 +67,6 @@
   },
   "resolutions": {
     "jsonld": "~1",
-    "@types/eslint": "^8",
-    "clownface": "zazuko/clownface#filter-return-value"
+    "@types/eslint": "^8"
   }
 }
