--- a/cli/package.json
+++ b/cli/package.json
@@ -26,6 +26,7 @@
     "@rdfine/csvw": "^0.6.3",
     "@rdfine/prov": "^0.1.1",
     "@rdfine/schema": "^0.6.3",
+    "@rdfine/shacl": "^0.8.6",
     "@rdfjs/fetch-lite": "^2.0.1",
     "@rdfjs/namespace": "^1.1.0",
     "@rdfjs/term-map": "^1.0.0",
@@ -83,6 +84,7 @@
     "@types/barnard59-base": "^1.0.1",
     "@types/barnard59-core": "^1.0.2",
     "@types/barnard59-graph-store": "^1.0.0",
+    "@types/barnard59-validate-shacl": "^0.3.0",
     "@types/body-parser": "^1.19.0",
     "@types/chai": "^4.2.13",
     "@types/chai-as-promised": "^7.1.3",
