fix: improve shared dimension editing

--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "@rdf-esm/dataset": "^0.5.1",
     "@rdfine/schema": "^0.6.3",
     "@rdfine/shacl": "^0.8",
+    "@rdfjs-elements/lit-helpers": "^0.2",
     "@rdfjs-elements/rdf-editor": "^0.5",
     "@rdfjs/term-set": "^1.0.1",
     "@sentry/tracing": "^6.2.0",
@@ -50,6 +51,7 @@
     "debounce": "^1.2.1",
     "html-parsed-element": "^0.4.1",
     "markdown-it": "^12.3.2",
+    "lit": "^2",
     "oidc-client": "^1.11.0",
     "process": "^0.11.10",
     "slugify": "^1.4.6",
