--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -60,6 +60,7 @@
     "rdf-cube-view-query": "^1.8.2",
     "rdf-ext": "^1.3.0",
     "rdf-literal": "^1.3.0",
+    "rdf-utils-fs": "^2.2.0",
     "set-link": "^1.0.0",
     "slug": "^5.0.0",
     "sparql-http-client": "^2.2.2",
