--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -94,6 +94,7 @@
     "@types/parse-prefer-header": "^1.0.1",
     "@types/rdf-ext": "^1.3.8",
     "@types/rdf-js": "^4.0.0",
+    "@types/rdf-utils-fs": "^2.1.0",
     "@types/rdf-transform-triple-to-quad": "^1.0.0",
     "@types/rdfjs__express-handler": "^1.1.1",
     "@types/rdfjs__fetch": "^2",
