--- a/.github/workflows/test-pipelines.yaml
+++ b/.github/workflows/test-pipelines.yaml
@@ -3,47 +3,21 @@ name: Test pipelines
 on: push
 
 jobs:
-  transform:
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    steps:
-      - uses: actions/checkout@v2
-      - uses: ./.github/workflows/setup-env
-      - run: yarn test:cli:transform
-        env:
-          AUTH_RUNNER_CLIENT_SECRET: ${{ secrets.AUTH_RUNNER_CLIENT_SECRET }}
-      - name: logs on fail
-        if: ${{ failure() }}
-        run: lando logs
-      - name: Codecov
-        uses: codecov/codecov-action@v1.0.5
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+  pipeline:
+    strategy:
+      matrix:
+        command:
+        - test:cli:transform
+        - test:cli:publish
+        - test:cli:import
+        - test:cli:timeoutJobs
 
-  publish:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/workflows/setup-env
-      - run: yarn test:cli:publish
-        env:
-          AUTH_RUNNER_CLIENT_SECRET: ${{ secrets.AUTH_RUNNER_CLIENT_SECRET }}
-      - name: logs on fail
-        if: ${{ failure() }}
-        run: lando logs
-      - name: Codecov
-        uses: codecov/codecov-action@v1.0.5
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-
-  import:
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    steps:
-      - uses: actions/checkout@v2
-      - uses: ./.github/workflows/setup-env
-      - run: yarn test:cli:import
+      - run: yarn ${{ matrix.command }}
         env:
           AUTH_RUNNER_CLIENT_SECRET: ${{ secrets.AUTH_RUNNER_CLIENT_SECRET }}
       - name: logs on fail
