--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:cli:import": "c8 -o coverage/publish mocha --recursive cli/**/*.test.ts --grep @cube-creator/cli/lib/commands/import",
     "test:cli:publish": "c8 -o coverage/publish mocha --recursive cli/**/*.test.ts --grep @cube-creator/cli/lib/commands/publish",
     "test:cli:transform": "c8 -o coverage/transform mocha --recursive cli/**/*.test.ts --grep @cube-creator/cli/lib/commands/transform",
+    "test:cli:timeoutJobs": "c8 -o coverage/transform mocha --recursive cli/**/*.test.ts --grep @cube-creator/cli/lib/commands/timeoutJobs",
     "test:e2e": "docker-compose run --rm e2e-tests --",
     "seed-data": "dotenv -e .local.env -- bash -c \"ts-node packages/testing/index.ts -i ubd dimensions px-cube hierarchies\""
   },
