--- a/.github/workflows/setup-env/action.yml
+++ b/.github/workflows/setup-env/action.yml
@@ -15,11 +15,11 @@ runs:
         docker_version: 20.10.12
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
-    - name: Install lando
-      run: sh e2e-tests/install-lando.sh
-      shell: bash
     - name: Start site
-      run: sh e2e-tests/start-lando.sh
-      shell: bash
+      uses: tpluscode/action-setup-lando@v0.1.2
+      with:
+        version: v3.6.2
+        healthcheck: https://cube-creator.lndo.site/ping
+        timeout: 30000
       env:
         DOCKER_BUILDKIT: "1"
