--- a/ui/package.json
+++ b/ui/package.json
@@ -50,6 +50,7 @@
     "core-js": "^3.6.5",
     "debounce": "^1.2.1",
     "html-parsed-element": "^0.4.1",
+    "humanize-duration": "^3.27.3",
     "markdown-it": "^12.3.2",
     "lit": "^2",
     "oidc-client": "^1.11.0",
@@ -69,6 +70,7 @@
     "@cypress/webpack-preprocessor": "^5.4.10",
     "@types/clownface": "^1.5.0",
     "@types/debounce": "^1.2.0",
+    "@types/humanize-duration": "^3.27.1",
     "@types/markdown-it": "^12.2.3",
     "@types/rdf-ext": "^1.3.11",
     "@types/rdf-js": "^4",
