--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@zazuko/cube-creator",
   "private": true,
   "scripts": {
+    "postinstall": "patch-package",
     "lint": "eslint . --ext .ts,.vue,.tsx --quiet --ignore-path .gitignore",
     "test": "c8 -o coverage/apis mocha --recursive apis/**/*.test.ts packages/**/*.test.ts --grep @SPARQL --invert",
     "test:queries": "c8 -o coverage/queries mocha --recursive apis/**/*.test.ts ui/**/*.test.ts --grep @SPARQL",
@@ -20,6 +21,10 @@
     "apis/*",
     "packages/*"
   ],
+  "dependencies": {
+    "patch-package": "^6.5.0",
+    "postinstall-postinstall": "^2.1.0"
+  },
   "devDependencies": {
     "@changesets/cli": "^2.19.0",
     "@tpluscode/eslint-config": "^0.3.0",
