fix: clearing values when switching sh:xone form alternatives

--- a/ui/package.json
+++ b/ui/package.json
@@ -19,9 +19,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@he-tree/vue3": "^1.2.9",
-    "@hydrofoil/shaperone-core": "^0.8.6",
-    "@hydrofoil/shaperone-hydra": "^0.3.3",
-    "@hydrofoil/shaperone-wc": "^0.6.8",
+    "@hydrofoil/shaperone-core": "^0.9.10",
+    "@hydrofoil/shaperone-hydra": "0.3.14",
+    "@hydrofoil/shaperone-wc": "0.7.10",
     "@oruga-ui/oruga-next": "^0.5.4",
     "@oruga-ui/theme-bulma": "^0.2.3",
     "@rdf-esm/data-model": "^0.5.3",
