fix: clearing values in dropdowns

--- a/ui/package.json
+++ b/ui/package.json
@@ -19,9 +19,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@he-tree/vue3": "^1.2.9",
-    "@hydrofoil/shaperone-core": "^0.9.10",
-    "@hydrofoil/shaperone-hydra": "0.3.14",
-    "@hydrofoil/shaperone-wc": "0.7.10",
+    "@hydrofoil/shaperone-core": "^0.10.1",
+    "@hydrofoil/shaperone-hydra": "0.3.15",
+    "@hydrofoil/shaperone-wc": "^0.7.11",
+    "@hydrofoil/shaperone-wc-shoelace": "^0.3",
     "@oruga-ui/oruga-next": "^0.5.4",
     "@oruga-ui/theme-bulma": "^0.2.3",
     "@rdf-esm/data-model": "^0.5.3",
