build(deps): update express and uppy

--- a/ui/package.json
+++ b/ui/package.json
@@ -37,9 +37,13 @@
     "@tinyhttp/content-disposition": "^2.0.5",
     "@tpluscode/rdf-ns-builders": "^1.0.0",
     "@tpluscode/rdfine": "^0.5.19",
-    "@uppy/aws-s3-multipart": "^2.2.1",
-    "@uppy/core": "^2.1.8",
-    "@uppy/vue": "^0.4.6",
+    "@uppy/aws-s3-multipart": "^3.1.1",
+    "@uppy/core": "^3.0.4",
+    "@uppy/dashboard": "^3.2.0",
+    "@uppy/drag-drop": "^3.0.1",
+    "@uppy/progress-bar": "^3.0.1",
+    "@uppy/status-bar": "^3.0.1",
+    "@uppy/vue": "^1.0.1",
     "@zazuko/cube-hierarchy-query": "^1.0.0-pre.1",
     "@zazuko/rdf-vocabularies": "^2021.3.17",
     "alcaeus": "^2.1",
@@ -52,8 +56,8 @@
     "debounce": "^1.2.1",
     "html-parsed-element": "^0.4.1",
     "humanize-duration": "^3.27.3",
-    "markdown-it": "^12.3.2",
     "lit": "^2",
+    "markdown-it": "^12.3.2",
     "oidc-client": "^1.11.0",
     "process": "^0.11.10",
     "slugify": "^1.4.6",
