--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@zazuko/cube-creator",
   "private": true,
   "scripts": {
-    "postinstall": "patch-package",
+    "postinstall": "patch-package & yarn-deduplicate",
     "lint": "eslint . --ext .ts,.vue,.tsx --quiet --ignore-path .gitignore",
     "test": "c8 -o coverage/apis mocha --recursive apis/**/*.test.ts packages/**/*.test.ts --grep @SPARQL --invert",
     "test:queries": "c8 -o coverage/queries mocha --recursive apis/**/*.test.ts ui/**/*.test.ts --grep @SPARQL",
@@ -46,7 +46,8 @@
     "standard": "^16.0.0",
     "ts-node": "^9.0.0",
     "typescript": "~4.5.0",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "yarn-deduplicate": "^6.0.1"
   },
   "mocha": {
     "extension": "ts",
