--- a/.github/workflows/docker-cli.yaml
+++ b/.github/workflows/docker-cli.yaml
@@ -60,6 +60,7 @@ jobs:
 
       - name: Create Sentry release
         uses: getsentry/action-release@v1
+        if: ${{ github.actor != 'dependabot[bot]' }}
         env:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           SENTRY_ORG: zazuko
