fix: use predefined shapes to query shared dimensions

--- a/apis/shared-dimensions/package.json
+++ b/apis/shared-dimensions/package.json
@@ -7,6 +7,7 @@
     "@cube-creator/core": "1.0.0",
     "@cube-creator/express": "0.0.0",
     "@hydrofoil/labyrinth": "^0.4.2",
+    "@hydrofoil/shape-to-query": "^0.3.2",
     "@rdfine/hydra": "^0.8.2",
     "@rdfine/rdfs": "^0.6.4",
     "@rdfine/schema": "^0.6.3",
@@ -29,12 +30,16 @@
     "http-errors": "^2.0.0",
     "http-status": "^1.5.0",
     "hydra-box-middleware-shacl": "1.1.0",
+    "is-graph-pointer": "^1.2.2",
     "middleware-async": "^1.2.7",
     "nanoid": "^3.1.23",
     "once": "^1.4.0",
+    "onetime": "^5",
     "parse-prefer-header": "^1.0.0",
+    "rdf-dataset-ext": "^1.0.1",
     "rdf-ext": "^1.3.0",
     "rdf-literal": "^1.2.0",
+    "rdf-utils-fs": "^2",
     "rdf-validate-shacl": "^0.4.3",
     "slugify": "^1.6.5",
     "sparql-http-client": "^2.2.2",
@@ -45,6 +50,8 @@
     "@types/camouflage-rewrite": "^1.2.0",
     "@types/clownface": "^1.2.6",
     "@types/parse-prefer-header": "^1.0.0",
+    "@types/rdf-dataset-ext": "^1",
+    "@types/rdf-utils-fs": "^2",
     "@types/sinon": "^10.0.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
