--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -30,7 +30,7 @@
     "@tpluscode/rdfine": "^0.5.23",
     "@tpluscode/sparql-builder": "^0.3.24",
     "@uppy/companion": "^4.1.1",
-    "@zazuko/rdf-vocabularies": "^2021.3.17",
+    "@zazuko/rdf-vocabularies": ">=2021.3.17",
     "aws-sdk": "^2.1048.0",
     "body-parser": "^1.19.0",
     "clownface": "^1.0.0",
