--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,7 +8,7 @@
     "@rdfjs/parser-n3": "^1.1.4",
     "@tpluscode/rdf-ns-builders": "^1.0.0",
     "@tpluscode/rdf-string": "^0.2.21",
-    "@zazuko/rdf-vocabularies": "^2021.3.17",
+    "@zazuko/rdf-vocabularies": ">=2021.3.17",
     "@zazuko/vocabulary-extras": "^1.2.3",
     "rdf-ext": "^1.3.0",
     "sparql-http-client": "^2.2.2",
