--- a/ui/package.json
+++ b/ui/package.json
@@ -45,7 +45,7 @@
     "@uppy/status-bar": "^3.0.1",
     "@uppy/vue": "^1.0.1",
     "@zazuko/cube-hierarchy-query": "^1.0.0-pre.1",
-    "@zazuko/rdf-vocabularies": "^2021.3.17",
+    "@zazuko/rdf-vocabularies": ">=2021.3.17",
     "alcaeus": "^2.1",
     "buffer": "^6.0.3",
     "bulma-quickview": "^2.0.0",
