--- a/otel/collector.yaml
+++ b/otel/collector.yaml
@@ -7,7 +7,8 @@ receivers:
 exporters:
   jaeger:
     endpoint: jaeger:14250
-    insecure: true
+    tls:
+      insecure: true
   prometheus:
     endpoint: "0.0.0.0:8889"
     resource_to_telemetry_conversion:
