--- a/ui/package.json
+++ b/ui/package.json
@@ -67,7 +67,7 @@
     "vue": "^3.1.0",
     "vue-custom-element": "^3.2.14",
     "vue-router": "^4.0.0",
-    "vue-select": "^4.0.0-beta.3",
+    "vue-select": "4.0.0-beta.3",
     "vuex": "^4.0.0",
     "vuex-oidc": "^3.10.1"
   },
