wip: shacl playground lib

--- a/cli/package.json
+++ b/cli/package.json
@@ -38,7 +38,8 @@
     "@tpluscode/rdfine": "^0.5.19",
     "@tpluscode/sparql-builder": "^0.3.15",
     "@zazuko/rdf-vocabularies": ">=2021",
-    "@zazuko/shacl-playground": "*",
+    "@zazuko/s": "^1.0.0",
+    "@zazuko/shacl-playground": "^1.0.0",
     "alcaeus": "^2",
     "aws-sdk": "^2.559.0",
     "barnard59": "^1.1.0",
