--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -45,6 +45,7 @@
     "express-jwt": "^8.3.0",
     "express-jwt-permissions": "^1.3.7",
     "express-rdf-request": "0.1.0",
+    "get-stream": "^6.0.1",
     "http-errors": "^2.0.0",
     "hydra-box": "^0.6.6",
     "hydra-box-middleware-shacl": "1.1.0",
