--- a/.github/workflows/setup-env/action.yml
+++ b/.github/workflows/setup-env/action.yml
@@ -16,7 +16,7 @@ runs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
     - name: Start site
-      uses: tpluscode/action-setup-lando@v0.1.4
+      uses: tpluscode/action-setup-lando@master
       with:
         version: v3.11.0
         healthcheck: https://cube-creator.lndo.site/ping
