--- a/.lando.yml
+++ b/.lando.yml
@@ -57,6 +57,7 @@ services:
     type: compose
     app_mount: false
     ssl: true
+    scanner: false
     services:
       image: ghcr.io/zazuko/trifid:v2
       user: root
@@ -66,6 +67,7 @@ services:
   s3:
     type: compose
     ssl: true
+    scanner: false
     services:
       image: minio/minio:RELEASE.2020-12-03T05-49-24Z
       command: usr/bin/docker-entrypoint.sh server /data
@@ -78,6 +80,7 @@ services:
     type: node:custom
     command: mkdir -p /var/www/.npm-global/lib && npx nodemon -w packages -w cli --verbose --ext ts,ttl,js,trig --ignore **/*.spec.ts --ignore **/*.spec-graphs.ts --exec node --inspect=0.0.0.0:45681 -r ts-node/register --inspect cli/server.ts
     port: 80
+    scanner: false
     overrides:
       image: node:18
       ports:
