--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "prepare": "husky install",
-    "postinstall": "patch-package",
+    "postinstall": "patch-package; yarn-deduplicate",
     "lint": "eslint . --ext .ts,.vue,.tsx --quiet --ignore-path .gitignore",
     "c8": "c8 --reporter lcovonly",
     "test": "yarn c8 -o coverage/apis mocha --recursive apis/**/*.test.ts packages/**/*.test.ts --grep @SPARQL --invert",
@@ -50,7 +50,8 @@
     "standard": "^17.0.0",
     "ts-node": "^9.0.0",
     "typescript": "~4.5.0",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "yarn-deduplicate": "^6.0.2"
   },
   "mocha": {
     "extension": "ts",
