--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   ],
   "dependencies": {
     "patch-package": "^6.5.0",
-    "postinstall-postinstall": "^2.1.0"
+    "postinstall-postinstall": "^2.1.0",
+    "yarn-deduplicate": "^6.0.2"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
@@ -50,8 +51,7 @@
     "standard": "^17.0.0",
     "ts-node": "^9.0.0",
     "typescript": "~4.5.0",
-    "winston": "^3.3.3",
-    "yarn-deduplicate": "^6.0.2"
+    "winston": "^3.3.3"
   },
   "mocha": {
     "extension": "ts",
