--- a/packages/model/package.json
+++ b/packages/model/package.json
@@ -12,14 +12,15 @@
     "@rdfine/shacl": "^0.8.5",
     "@tpluscode/rdf-ns-builders": "^1.0.0",
     "@tpluscode/rdfine": "^0.5.19",
+    "@types/rdf-ext": "^1.3.8",
     "is-uri": "^1.2.0",
     "uri-template": "^1.0.1"
   },
   "devDependencies": {
     "@cube-creator/testing": "^0.1.21",
-    "@types/clownface": "^1",
+        "@types/clownface": "^1",
     "@types/is-uri": "^1",
-    "@rdfjs/types": "^1.1.0",
+"@rdfjs/types": "^1.1.0",
     "alcaeus": "^2",
     "chai": "^4.3.4",
     "mocha": "^10"
