--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -40,7 +40,7 @@ jobs:
     name: Create tags
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v4
 
       - name: Generate token
         id: generate_token
@@ -50,7 +50,7 @@ jobs:
           private_key: ${{ secrets.GH_PRIVATE_KEY }}
 
       - name: Tag Core API
-        uses: ButlerLogic/action-autotag@stable
+        uses: ButlerLogic/action-autotag@1.1.2
         continue-on-error: true
         with:
           root: apis/core
@@ -59,7 +59,7 @@ jobs:
           GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
 
       - name: Tag UI
-        uses: ButlerLogic/action-autotag@stable
+        uses: ButlerLogic/action-autotag@1.1.2
         continue-on-error: true
         with:
           root: ui
@@ -68,7 +68,7 @@ jobs:
           GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
 
       - name: Tag CLI
-        uses: ButlerLogic/action-autotag@stable
+        uses: ButlerLogic/action-autotag@1.1.2
         continue-on-error: true
         with:
           root: cli
