--- a/cli/package.json
+++ b/cli/package.json
@@ -112,6 +112,7 @@
     "@types/sinon-chai": "^3.2.4",
     "@types/sparql-http-client": "^2",
     "@types/through2": "^2.0.36",
+    "barnard59-core": "^6.0.0",
     "chai": "^4.3.4",
     "dotenv": "^16.0.0",
     "dotenv-cli": "^5.0.0",
