--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -59,6 +59,7 @@
     "once": "^1.4.0",
     "parse-prefer-header": "^1.0.0",
     "rdf-cube-view-query": "^1.8.2",
+    "rdf-dataset-ext": "^1.1.0",
     "rdf-ext": "^1.3.0",
     "rdf-literal": "^1.3.0",
     "set-link": "^1.0.0",
