--- a/apis/shared-dimensions/package.json
+++ b/apis/shared-dimensions/package.json
@@ -7,7 +7,7 @@
     "@cube-creator/core": "1.0.0",
     "@cube-creator/express": "0.0.0",
     "@hydrofoil/labyrinth": "^0.4.2",
-    "@hydrofoil/shape-to-query": "^0.8.1",
+    "@hydrofoil/shape-to-query": "^0.12",
     "@rdfine/hydra": "^0.8.2",
     "@rdfine/rdfs": "^0.6.4",
     "@rdfine/schema": "^0.6.3",
@@ -39,6 +39,7 @@
     "rdf-dataset-ext": "^1.0.1",
     "rdf-ext": "^1.3.0",
     "rdf-literal": "^1.2.0",
+    "rdf-loader-code": "^0.3.3",
     "rdf-utils-fs": "^2",
     "rdf-validate-shacl": "^0.4.3",
     "slugify": "^1.6.5",
@@ -51,6 +52,7 @@
     "@types/clownface": "^1.2.6",
     "@types/parse-prefer-header": "^1.0.0",
     "@types/rdf-dataset-ext": "^1",
+    "@types/rdf-loader-code": "^0.3",
     "@types/rdf-utils-fs": "^2",
     "@types/sinon": "^10.0.0",
     "chai": "^4.2.0",
