--- a/cli/package.json
+++ b/cli/package.json
@@ -44,12 +44,12 @@
     "aws-sdk": "^2.559.0",
     "barnard59": "^5.0.2",
     "barnard59-base": "^2.4.2",
-    "barnard59-cube": "^1.4.6",
-    "barnard59-formats": "^2.1.1",
+    "barnard59-cube": "^1.4.7",
+    "barnard59-formats": "^3",
     "barnard59-graph-store": "^5.1.2",
     "barnard59-http": "^2.0.0",
     "barnard59-rdf": "^3.4.0",
-    "barnard59-shacl": "^1.4.5",
+    "barnard59-shacl": "^1.4.7",
     "body-parser": "^1.19.0",
     "clownface": "^1",
     "commander": "^4.1.1",
@@ -68,7 +68,7 @@
     "once": "^1.4.0",
     "rdf-ext": "^1.3.0",
     "rdf-literal": "^1.3.0",
-    "rdf-parser-csvw": "^0.15",
+    "@zazuko/rdf-parser-csvw": "^0.16",
     "rdf-stream-to-dataset-stream": "^1.0.0",
     "rdf-utils-fs": "^2.1.0",
     "rdf-validate-datatype": "^0.1.3",
