--- a/cli/package.json
+++ b/cli/package.json
@@ -40,11 +40,12 @@
     "@zazuko/s": "^1.0.1",
     "@zazuko/shacl-playground": "^2.0.0",
     "@zazuko/rdf-utils-fs": "^3.3.1",
-    "alcaeus": "^3.0.0",
+    "alcaeus": "^3.0.1",
     "aws-sdk": "^2.559.0",
     "barnard59": "^5.0.4",
     "barnard59-base": "^2.4.2",
     "barnard59-cube": "^1.4.8",
+    "barnard59-env": "^1.2.6",
     "barnard59-formats": "^2.1.0",
     "barnard59-graph-store": "^6.0.0",
     "barnard59-http": "^2.0.0",
