--- a/.local.env
+++ b/.local.env
@@ -5,11 +5,11 @@ API_CORE_BASE=https://cube-creator.lndo.site/
 UI_BASE=https://app.cube-creator.lndo.site/
 
 # SPARQL endpoints
-STORE_QUERY_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/query
-STORE_UPDATE_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/update
-STORE_GRAPH_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/data
+STORE_QUERY_ENDPOINT=https://db.cube-creator.lndo.site/cube-creator/query
+STORE_UPDATE_ENDPOINT=https://db.cube-creator.lndo.site/cube-creator/update
+STORE_GRAPH_ENDPOINT=https://db.cube-creator.lndo.site/cube-creator/data
 STORE_ENGINE=fuseki
-PUBLIC_QUERY_ENDPOINT=http://db.cube-creator.lndo.site/shared-dimensions
+PUBLIC_QUERY_ENDPOINT=https://db.cube-creator.lndo.site/shared-dimensions
 TRIFID_UI=https://lindas.admin.ch/sparql
 VISUALIZE_UI=https://visualize.admin.ch
 
@@ -43,13 +43,15 @@ OTEL_LOG_LEVEL=debug
 MANAGED_DIMENSIONS_GRAPH=https://lindas.admin.ch/cube/dimension
 MANAGED_DIMENSIONS_API_BASE=https://cube-creator.lndo.site/
 MANAGED_DIMENSIONS_BASE=https://ld.admin.ch/cube/
-MANAGED_DIMENSIONS_STORE_QUERY_ENDPOINT=http://db.cube-creator.lndo.site/shared-dimensions/query
-MANAGED_DIMENSIONS_STORE_UPDATE_ENDPOINT=http://db.cube-creator.lndo.site/shared-dimensions/update
-MANAGED_DIMENSIONS_STORE_GRAPH_ENDPOINT=http://db.cube-creator.lndo.site/shared-dimensions/data
+MANAGED_DIMENSIONS_STORE_QUERY_ENDPOINT=https://db.cube-creator.lndo.site/shared-dimensions/query
+MANAGED_DIMENSIONS_STORE_UPDATE_ENDPOINT=https://db.cube-creator.lndo.site/shared-dimensions/update
+MANAGED_DIMENSIONS_STORE_GRAPH_ENDPOINT=https://db.cube-creator.lndo.site/shared-dimensions/data
 MANAGED_DIMENSIONS_STORE_ENGINE=fuseki
 
 # PX Cube sample
 PX_CUBE_BASE=https://environment.ld.admin.ch/foen/example/px-cube/
 PX_CUBE_GRAPH=http://example.org/px-cube
-PX_CUBE_QUERY_ENDPOINT=http://db.cube-creator.lndo.site/px-cube/query
-PX_CUBE_GRAPH_ENDPOINT=http://db.cube-creator.lndo.site/px-cube/data
+PX_CUBE_QUERY_ENDPOINT=https://db.cube-creator.lndo.site/px-cube/query
+PX_CUBE_GRAPH_ENDPOINT=https://db.cube-creator.lndo.site/px-cube/data
+
+NODE_TLS_REJECT_UNAUTHORIZED=0
