--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,7 +47,7 @@ jobs:
       - run: yarn seed-data
 
       - name: Hydra e2e tests
-        run: docker-compose -f docker-compose.yml -f docker-compose.posix.yml run e2e-tests
+        run: docker compose -f docker-compose.yml -f docker-compose.posix.yml run e2e-tests
       - name: core logs on fail
         if: ${{ failure() }}
         run: lando logs -s core
