--- a/packages/model/package.json
+++ b/packages/model/package.json
@@ -5,16 +5,16 @@
   "dependencies": {
     "@cube-creator/core": "1.0.0",
     "@rdf-esm/data-model": "^0.5.3",
-    "@rdfjs/types": "^1.1.0",
     "@rdfine/csvw": "^0.6.3",
     "@rdfine/hydra": "^0.8.0",
     "@rdfine/rdfs": "^0.6.3",
     "@rdfine/schema": "^0.6.3",
     "@rdfine/shacl": "^0.8.5",
+    "@rdfjs/types": "^1.1.0",
     "@tpluscode/rdf-ns-builders": "^1.0.0",
     "@tpluscode/rdfine": "^0.5.19",
-    "rdf-validate-datatype": "^0.1.3",
     "is-uri": "^1.2.0",
+    "rdf-validate-datatype": "^0.1.3",
     "uri-template": "^1.0.1"
   },
   "devDependencies": {
@@ -24,6 +24,7 @@
     "@types/rdf-validate-datatype": "^0.1",
     "alcaeus": "^2",
     "chai": "^4.3.4",
-    "mocha": "^10"
+    "mocha": "^10",
+    "mocha-chai-rdf": "^0.1.4"
   }
 }
